images put back into recent projects and alt tags altered for seo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <body>
   <h1 class="visually-hidden">A.P.T Builders – Trusted Building Services in Kent</h1>
+  <h1 class="visually-hidden">Private Swimming Pool installation in Kent</h1>
 
 
   <div class="page-wrapper">
@@ -143,51 +144,83 @@
  </div>
       <section>
         <h2 class="recent-projects-header">Recent Projects</h2>
+        
         <div class="infinite-carousel"id="carouselTrack">
+          <h4 class="recent-projects-subheader">Private Swimming Pool installation</h4>
           <div class="infinite-track">
-  <div class="slide-wrapper"><img src="images/main image for recent projects.jpg" alt="Swimming Pool Image"loading="lazy" /></div>
-  <div class="slide-wrapper"><img src="images/spbeg.jpg" alt="Swimming Pool Image"loading="lazy"></div>
-  <div class="slide-wrapper"><img src="images/spbeg2.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg3.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg4.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg5.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg6.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg7.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg8.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg9.jpg" alt="Swimming Pool Image"loading="lazy" /></div>
-  <div class="slide-wrapper"><img src="images/spbeg10.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg11.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg13.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg14.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg15.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg16.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg17.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg18.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg19.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg20.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg21.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg22.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg23.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg24.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spbeg25.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/dug hole for pool.jpeg" alt="Swimming Pool Image"loading="lazy"></div>
-  <div class="slide-wrapper"><img src="images/pool liner being craned in.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/edit empty pool liner in situ.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/only sides of structure and pool.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/open structure with pool.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/wide view of skeleton structure with pool.jpeg" alt="Swimming Pool Image"loading="lazy" /></div>
-  <div class="slide-wrapper"><img src="images/top view of skeleton structure and pool.jpeg" alt="Swimming Pool Image"loading="lazy" /></div>
-  <div class="slide-wrapper"><img src="images/skeleton structure with pool.jpeg" alt="Swimming Pool Image"loading="lazy" /></div>
-  <div class="slide-wrapper"><img src="images/structure half build.jpeg" alt="Swimming Pool Image"loading="lazy"></div>
-  <div class="slide-wrapper"><img src="images/structure over pool.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/interior metal structure inside.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/Swimming Pool Area (1).jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/Swimming Pool Area (5).jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/Swimming Pool Area (3).jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/swimming pool floor.jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/Swimming Pool Area (13).jpeg" alt="Swimming Pool Image"loading="lazy"/></div>
-  <div class="slide-wrapper"><img src="images/spfinishedpatiostairs.jpg" alt="Swimming Pool Image"loading="lazy"/></div>
-  
+   
+    <div class="slide-wrapper"><img src="images/spbeg.jpg" alt="Start of swimming pool dig in Sellindge, Kent." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg2.jpg" alt="Preparation dig out for swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg3.jpg" alt="Extended dig area for swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg4.jpg" alt="Digger work for local swimming pool in Sellindge." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg5.jpg" alt=" Side view of dig out for swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg6.jpg" alt="Ground preparation for swimming pool installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg7.jpg" alt="Side view of the groundworks for swimming pool area." class="lightbox-img" loading="lazy"></div>
+    
+    <div class="slide-wrapper"><img src="images/spbeg9.jpg" alt=" Boards and wooden planks for keeping the swimming pool dig in place." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg10.jpg" alt="Extra digger work in preparation for swimming pool installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg11.jpg" alt=" Back view of site where swimming pool area is going in." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg13.jpg" alt="Ground footings in place for installation of the swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg14.jpg" alt="Construction materials on site ready for pool installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg15.jpg" alt="Built foot structures for swimming pool preparation " class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg16.jpg" alt="Wooden boards to protect swimming pool area" class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg17.jpg" alt="Start of swimming pool dig out." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg18.jpg" alt="Dig out of swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg19.jpg" alt="Digger work on the sides inside the swimming pool section." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg20.jpg" alt="Sides being dug down ready for swimming pool installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg21.jpg" alt="Deep trenching during swimming pool groundworks in Sellindge Kent." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg22.jpg" alt="Timber supports installed to reinforce swimming pool excavation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg23.jpg" alt=" Top view of the the boards and wooden bars for inside the swimming pool section." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg24.jpg" alt=" Inside the swimming pool hole." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spbeg25.jpg" alt="Site view of swimming pool section ready for liner to be installed." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/dug hole for pool.jpeg" alt="Swimming pool dig complete and ready for liner installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/pool liner being craned in.jpeg" alt="Swimming pool liner being craned inside the prepared area in Sellindge." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/edit empty pool liner in situ.jpeg" alt="Swimming pool liner in place." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/only sides of structure and pool.jpeg" alt="Metal frame work for the building around the swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/open structure with pool.jpeg" alt="Side view of the metal framework being constructed around the swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/wide view of skeleton structure with pool.jpeg" alt="Metal framework for swimming pool with metal roof structure in place.." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/top view of skeleton structure and pool.jpeg" alt="Top view of the metal framework and swimming area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/skeleton structure with pool.jpeg" alt="Full view of metal framework and swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/structure half build.jpeg" alt="Side installation on building for swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/structure over pool.jpeg" alt="Roof and side installation of swimming pool building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/interior metal structure inside.jpeg" alt="Interior metal structure inside the swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (1).jpeg" alt="swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (5).jpeg" alt="Swimming pool floor installed." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (3).jpeg" alt="Back view of swimming pool floor installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/swimming pool floor.jpeg" alt="Side view of the swimming pools floor installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (13).jpeg" alt="Inside Swimming pool area decorating." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (10).jpeg" alt="Partitions and doors being installed in swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (4).jpeg" alt="Painting completed inside the swimming pool build." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (9).jpeg" alt="Doors installed on the partition walls." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (15).jpeg" alt="Floor tiles in wet room for swimming pool in Sellindge." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (12).jpeg" alt="Grey Floor tiles laid in wet room for indoor swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (6).jpeg" alt="Toilet installed and grout applied for toilet area of swimming pool build." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (11).jpeg" alt="Finished toilet area for indoor swimming pool in Sellindge, Kent." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/Swimming Pool Area (8).jpeg" alt="Finished toilet area with sink for the swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpatio.jpg" alt="Outside swimming groundworks in preparation for slabs." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpatio2.jpg" alt="Preparation for slabs to be laid around the swimming pool building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe.jpg" alt="Pipework installation for swimming pool in Sellindge, Kent." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe2.jpg" alt="Trenches dug out for pipework installation for swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe3.jpg" alt="Pipe splits in preparation for installation for swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe4.jpg" alt="Pipework at the side of the swimming pool building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe5.jpg" alt="Trenches dug out for pipework installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe6.jpg" alt="Pipework being installed for the swimming pool build in Sellindge, Kent." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdigpipe7.jpg" alt="Pipework installation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdrain.jpg" alt="Drainage for outside the swimming pool area." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spdrain2.jpg" alt="Drainage groundwork preparation." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/spstairs.jpg" alt="Slab steps for swimming pool section." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiobeg.jpg" alt="Slabs being laid outside the front of the swimming pool building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiosidebeg.jpg" alt="Slabs being laid around the side of the swimming pools building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiosidebeg3.jpg" alt="Laying slabs around the sides of the swimming pools building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiopipe.jpg" alt="Cut slab around piping." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiopeg2.jpg" alt="Slabs nearly complete outside the swimming pools building." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiopeg3.jpg" alt="Last section of slabs outside swimming pool build." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiopeg4.jpg" alt="Slabs spaced and ready for next stage." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiosidepeg.jpg" alt="Curved cut slab." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiosidepeg2.jpg" alt="Slabs all spaced around the side of the swimming pool." class="lightbox-img" loading="lazy"></div>
+    <div class="slide-wrapper"><img src="images/sppatiosidepeg3.jpg" alt="Side View of slabs down the side of the swimming pools building." class="lightbox-img" loading="lazy"></div>
+   
+    <div class="slide-wrapper"><img src="images/spfinishedpatiostairs.jpg" alt="Slabs ready for the final stage" class="lightbox-img" loading="lazy"></div>
 </div>
 
 </div>
