updated alt tags in roofing

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -6,6 +6,7 @@
   
   <meta name="description" content="Expert bathroom fitting services across Kent. Serving Ashford, Maidstone, Canterbury & Folkestone – from complete renovations to plumbing, tiling & accessibility upgrades.">
   <meta name="keywords" content="bathroom fitters Kent, bathroom installation, shower fitting, bath replacement, bathroom tiling, accessible bathrooms, plumbing, Ashford, Maidstone, Canterbury, Folkestone">
+  <meta name="robots" content="index, follow">
 
   <title>Bathroom Services in Kent | A.P.T Builders</title>
 
@@ -25,6 +26,8 @@
   <meta name="twitter:title" content="Bathroom Services in Kent | A.P.T Builders">
   <meta name="twitter:description" content="Bathroom refits, tiling, plumbing and more across Ashford, Maidstone & beyond. Free quotes.">
   <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+
 
   <link rel="stylesheet" href="styles/style.css" />
 <body>
