--- a/blockpaving.html
+++ b/blockpaving.html
@@ -6,7 +6,8 @@
 
   <meta name="description" content="Expert block paving services across Kent – driveways, patios, paths, and repairs in Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="block paving, driveways, patios, paving repairs, garden paths, block paving Kent, Ashford, Maidstone, Canterbury, Folkestone">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Block Paving Services in Kent | A.P.T Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/blockpaving.html" />
