--- a/brickwork.html
+++ b/brickwork.html
@@ -6,7 +6,8 @@
 
   <meta name="description" content="Skilled brickwork services across Kent: new builds, repairs, garden walls, extensions, and repointing in Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="brickwork Kent, bricklaying, repointing, garden walls, extensions, structural brickwork, masonry, Ashford, Maidstone, Canterbury, Folkestone">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Brickwork Services in Kent | A.P.T Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/brickwork.html" />
