--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
 
   <meta name="description" content="Get in touch with A.P.T Builders — serving Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells & all Kent. Request a quote or ask a question today.">
   <meta name="keywords" content="contact, APT Builders, request a quote, enquiries, phone, email, Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells, Kent">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Contact A.P.T Builders | Ashford, Maidstone, Canterbury, Kent</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/contact.html">
