--- a/decorating.html
+++ b/decorating.html
@@ -7,7 +7,8 @@
 
   <meta name="description" content="Interior and exterior painting and decorating services across Kent including Ashford, Maidstone, Folkestone, and Canterbury. High-quality finishes from A.P.T Builders.">
   <meta name="keywords" content="painting, decorating, painters, interior painting, exterior decorating, wallpapering, feature walls, Kent, Ashford, Maidstone, Canterbury, Folkestone">
-
+    
+  <meta name="robots" content="index, follow">
   <title>Painting & Decorating in Kent | A.P.T Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/decorating.html" />
