--- a/extensions.html
+++ b/extensions.html
@@ -7,7 +7,8 @@
 
   <meta name="description" content="Home extensions, garage conversions and full builds in Kent, covering Ashford, Maidstone, Canterbury & Folkestone. Expand your living space with A.P.T Builders.">
   <meta name="keywords" content="home extensions, garage conversions, house build, room extension, Kent builders, Ashford, Maidstone, Canterbury, Folkestone">
-
+    
+  <meta name="robots" content="index, follow">
   <title>House Extensions & Conversions | A.P.T Builders Kent</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/extensions.html" />
