--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -6,7 +6,8 @@
 
   <meta name="description" content="Explore A.P.T. Builders’ bathroom gallery – showcasing fitted bathrooms, tiling, walk-in showers, bath refits and plumbing work across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="bathroom fitting, fitted bathrooms, bathroom gallery, Kent bathrooms, walk-in showers, bath refits, plumbing installations, bathroom renovation, Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Bathroom Gallery | A.P.T. Builders – Fitted Bathrooms in Kent</title>
 
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
