--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -7,7 +7,8 @@
   <!-- SEO Meta Tags -->
   <meta name="description" content="Kitchen fitting gallery – cabinets, appliances & worktops by A.P.T Builders in Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="kitchen fitting Kent, kitchen renovation, kitchen installations, cabinet fitting, worktop installers, Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Kitchens Gallery | A.P.T Builders – Fitted Kitchens in Kent</title>
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page3.html">
 
