--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -7,7 +7,8 @@
   <!-- SEO Meta -->
   <meta name="description" content="Explore completed brickwork projects from A.P.T. Builders including wall building, pointing and restoration services across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="bricklaying, brickwork gallery, wall building, pointing services, restoration, builders in Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Brickwork Gallery | A.P.T. Builders – Wall Building & Restoration Kent</title>
 
   <!-- Canonical -->
