--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -9,7 +9,8 @@
   <meta name="keywords" content="landscaping gallery, garden landscaping, patio installation, turfing, fencing, garden transformations, Ashford, Maidstone, Folkestone, Canterbury">
   <meta name="robots" content="index, follow">
   <meta name="author" content="A.P.T. Builders">
-
+  
+  <meta name="robots" content="index, follow">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://aptbuilders.co.uk/gallery-page6.html" />
 
