--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -8,7 +8,8 @@
 
   <meta name="description" content="Browse our painting and decorating gallery showcasing interior walls, exterior facades, and decorative finishes across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="painting gallery, decorating gallery, interior painting, exterior painting, wall finishes, Kent decorators, Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page7.html">
 
