--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
   
   <meta name="description" content="Explore A.P.T. Builders’ gallery of completed projects: roofing, kitchen & bathroom fittings, landscaping, brickwork & block paving across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="Kent building gallery, APT Builders projects, roofing gallery Kent, kitchen renovations Kent, bathroom fitting examples, landscaping projects Kent, block paving driveways, brickwork photos, Canterbury builders, Folkestone building work, Maidstone property renovations, Ashford construction services">
-
+  
+  <meta name="robots" content="index, follow">
 
   <title>Project Gallery | A.P.T Builders – Roofing, Bathrooms, Kitchens & More in Kent</title>
 
