--- a/kitchens.html
+++ b/kitchens.html
@@ -6,7 +6,8 @@
   
   <meta name="description" content="Kitchen fitting services across Kent including Ashford, Maidstone, Canterbury & Folkestone. Full installations, upgrades, plumbing, tiling and redesigns.">
   <meta name="keywords" content="kitchen fitting Kent, kitchen installers, kitchen refurbishment, kitchen redesign, tiling, plumbing, kitchen installation Ashford, Maidstone, Canterbury, Folkestone">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Kitchen Fitting Services in Kent | A.P.T Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/kitchens.html" />
