--- a/landscaping.html
+++ b/landscaping.html
@@ -6,7 +6,8 @@
 
   <meta name="description" content="Landscaping and groundwork services in Kent – turfing, decking, patios, fencing & outdoor improvements across Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="landscaping, garden landscaping, turfing, fencing, decking, patios, groundwork, outdoor design, garden improvements, Kent, Ashford, Maidstone, Canterbury, Folkestone">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Landscaping Services in Kent | A.P.T Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/landscaping.html" />
