--- a/roofing.html
+++ b/roofing.html
@@ -6,7 +6,8 @@
   
   <meta name="description" content="Reliable roofing services across Kent including Ashford, Maidstone, Folkestone & Canterbury. New roofs, repairs, tile replacement, chimney work & more.">
   <meta name="keywords" content="roofing Kent, roof repairs, new roof Kent, flat roof, pitched roof, chimney repointing, fascia replacement, roofers in Ashford, Maidstone, Canterbury, Folkestone">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Roofing Services in Kent | A.P.T Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/roofing.html" />
