--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -6,6 +6,8 @@
   <title>Block Paving & Driveways Gallery | A.P.T. Builders Kent</title>
   <meta name="description" content="View our block paving & driveways gallery: see durable patterns, paths & finishes completed across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="block paving gallery, driveways in Kent, pathway designs, driveway block paving, paving installation, Ashford, Maidstone, Folkestone, Canterbury">
+  
+  <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page5.html">
 
   <!-- Preload for logo -->
