--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -8,7 +8,8 @@
 
   <meta name="description" content="Browse our gallery of house extensions, side returns, loft builds & rear expansions by A.P.T Builders across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="house extension gallery, Kent extensions, home expansion, rear extension, side return, loft extension, Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page8.html">
 
