--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -8,7 +8,8 @@
 
   <meta name="description" content="Explore our gallery of specialist building projects including swimming pools, bespoke designs, and custom work completed by A.P.T Builders across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="specialist builds gallery, custom building projects, bespoke building, swimming pool builders, custom extensions, Kent builders, Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page9.html">
 
