--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <meta name="description" content="Privacy policy for A.P.T Builders. Learn how we collect, use, and protect your personal data in accordance with UK GDPR.">
+  
+  <meta name="robots" content="index, follow">
   <meta name="keywords" content="privacy policy, data protection, GDPR, personal information, Kent builders">
   <title>Privacy Policy | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
