--- a/services.html
+++ b/services.html
@@ -6,7 +6,8 @@
   
   <meta name="description" content="Explore our expert building services in Kent: roofing, kitchens, bathrooms, landscaping, brickwork, paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="building services Kent, Kent builders, roofing, bathroom fitting, kitchen fitting, landscaping, groundwork, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
-
+  
+  <meta name="robots" content="index, follow">
   <title>Our Services | A.P.T Builders in Kent</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/services.html" />
