--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -124,79 +124,78 @@
   
   
   <div class="gallery lightbox-gallery">
-    <img src="images/spbeg.jpg" alt="Special Build Image 1" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg2.jpg" alt="Special Build Image 2" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg3.jpg" alt="Special Build Image 3" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg4.jpg" alt="Special Build Image 4" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg5.jpg" alt="Special Build Image 5" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg6.jpg" alt="Special Build Image 6" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg7.jpg" alt="Special Build Image 7" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg8.jpg" alt="Special Build Image 8" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg9.jpg" alt="Special Build Image 9" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg10.jpg" alt="Special Build Image 10" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg11.jpg" alt="Special Build Image 11" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg13.jpg" alt="Special Build Image 13" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg14.jpg" alt="Special Build Image 14" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg15.jpg" alt="Special Build Image 15" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg16.jpg" alt="Special Build Image 16" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg17.jpg" alt="Special Build Image 17" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg18.jpg" alt="Special Build Image 18" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg19.jpg" alt="Special Build Image 19" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg20.jpg" alt="Special Build Image 20" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg21.jpg" alt="Special Build Image 21" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg22.jpg" alt="Special Build Image 22" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg23.jpg" alt="Special Build Image 23" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg24.jpg" alt="Special Build Image 24" class="lightbox-img" loading="lazy">
-    <img src="images/spbeg25.jpg" alt="Special Build Image 25" class="lightbox-img" loading="lazy">
-    <img src="images/dug hole for pool.jpeg" alt="Special Build Image 26" class="lightbox-img" loading="lazy">
-    <img src="images/pool liner being craned in.jpeg" alt="Special Build Image 27" class="lightbox-img" loading="lazy">
-    <img src="images/edit empty pool liner in situ.jpeg" alt="Special Build Image 28" class="lightbox-img" loading="lazy">
-    <img src="images/only sides of structure and pool.jpeg" alt="Special Build Image 29" class="lightbox-img" loading="lazy">
-    <img src="images/open structure with pool.jpeg" alt="Special Build Image 30" class="lightbox-img" loading="lazy">
-    <img src="images/wide view of skeleton structure with pool.jpeg" alt="Special Build Image 31" class="lightbox-img" loading="lazy">
-    <img src="images/top view of skeleton structure and pool.jpeg" alt="Special Build Image 32" class="lightbox-img" loading="lazy">
-    <img src="images/skeleton structure with pool.jpeg" alt="Special Build Image 33" class="lightbox-img" loading="lazy">
-    <img src="images/structure half build.jpeg" alt="Special Build Image 34" class="lightbox-img" loading="lazy">
-    <img src="images/structure over pool.jpeg" alt="Special Build Image 35" class="lightbox-img" loading="lazy">
-    <img src="images/interior metal structure inside.jpeg" alt="Special Build Image 36" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (1).jpeg" alt="Special Build Image 37" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (5).jpeg" alt="Special Build Image 38" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (3).jpeg" alt="Special Build Image 39" class="lightbox-img" loading="lazy">
-    <img src="images/swimming pool floor.jpeg" alt="image" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (13).jpeg" alt="Special Build Image 40" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (10).jpeg" alt="Special Build Image 41" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (4).jpeg" alt="Special Build Image 42" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (9).jpeg" alt="Special Build Image 43" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (15).jpeg" alt="Special Build Image 44" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (12).jpeg" alt="Special Build Image 45" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (6).jpeg" alt="Special Build Image 46" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (11).jpeg" alt="Special Build Image 47" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (8).jpeg" alt="Special Build Image 48" class="lightbox-img" loading="lazy">
-    <img src="images/Swimming Pool Area (7).jpeg" alt="Special Build Image 49" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpatio.jpg" alt="Special Build Image 50" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpatio2.jpg" alt="Special Build Image 51" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe.jpg" alt="Special Build Image 52" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe2.jpg" alt="Special Build Image 53" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe3.jpg" alt="Special Build Image 54" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe4.jpg" alt="Special Build Image 55" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe5.jpg" alt="Special Build Image 56" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe6.jpg" alt="Special Build Image 57" class="lightbox-img" loading="lazy">
-    <img src="images/spdigpipe7.jpg" alt="Special Build Image 58" class="lightbox-img" loading="lazy">
-    <img src="images/spdrain.jpg" alt="Special Build Image 59" class="lightbox-img" loading="lazy">
-    <img src="images/spdrain2.jpg" alt="Special Build Image 60" class="lightbox-img" loading="lazy">
-    <img src="images/spstairs.jpg" alt="Special Build Image 61" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiobeg.jpg" alt="Special Build Image 62" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiosidebeg.jpg" alt="Special Build Image 63" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiosidebeg3.jpg" alt="Special Build Image 64" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiopipe.jpg" alt="Special Build Image 65" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiopeg2.jpg" alt="Special Build Image 66" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiopeg3.jpg" alt="Special Build Image 67" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiopeg4.jpg" alt="Special Build Image 68" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiosidepeg.jpg" alt="Special Build Image 69" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiosidepeg2.jpg" alt="Special Build Image 70" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiosidepeg3.jpg" alt="Special Build Image 71" class="lightbox-img" loading="lazy">
-    <img src="images/sppatiopeg.jpg" alt="Special Build Image 72" class="lightbox-img" loading="lazy">
-    <img src="images/spfinishedpatiostairs.jpg" alt="Special Build Image 73" class="lightbox-img" loading="lazy">
+  <img src="images/spbeg.jpg" alt="Start of swimming pool dig in Sellindge, Kent." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg2.jpg" alt="Preparation dig out for swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg3.jpg" alt="Extended dig area for swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg4.jpg" alt="Digger work for local swimming pool in Sellindge." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg5.jpg" alt=" Side view of dig out for swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg6.jpg" alt="Ground preparation for swimming pool installation." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg7.jpg" alt="Side view of the groundworks for swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg9.jpg" alt=" Boards and wooden planks for keeping the swimming pool dig in place." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg10.jpg" alt="Extra digger work in preparation for swimming pool installation." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg11.jpg" alt=" Back view of site where swimming pool area is going in." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg13.jpg" alt="Ground footings in place for installation of the swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg14.jpg" alt="Construction materials on site ready for pool installation." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg15.jpg" alt="Built foot structures for swimming pool preparation " class="lightbox-img" loading="lazy"><
+    <img src="images/spbeg16.jpg" alt="Wooden boards to protect swimming pool area" class="lightbox-img" loading="lazy">
+    <img src="images/spbeg17.jpg" alt="Start of swimming pool dig out." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg18.jpg" alt="Dig out of swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg19.jpg" alt="Digger work on the sides inside the swimming pool section." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg20.jpg" alt="Sides being dug down ready for swimming pool installation." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg21.jpg" alt="Deep trenching during swimming pool groundworks in Sellindge Kent." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg22.jpg" alt="Timber supports installed to reinforce swimming pool excavation." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg23.jpg" alt=" Top view of the the boards and wooden bars for inside the swimming pool section." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg24.jpg" alt=" Inside the swimming pool hole." class="lightbox-img" loading="lazy">
+    <img src="images/spbeg25.jpg" alt="Site view of swimming pool section ready for liner to be installed." class="lightbox-img" loading="lazy">
+    <img src="images/dug hole for pool.jpeg" alt="Swimming pool dig complete and ready for liner installation." class="lightbox-img" loading="lazy">
+    <img src="images/pool liner being craned in.jpeg" alt="Swimming pool liner being craned inside the prepared area in Sellindge." class="lightbox-img" loading="lazy">
+    <img src="images/edit empty pool liner in situ.jpeg" alt="Swimming pool liner in place." class="lightbox-img" loading="lazy">
+    <img src="images/only sides of structure and pool.jpeg" alt="Metal frame work for the building around the swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/open structure with pool.jpeg" alt="Side view of the metal framework being constructed around the swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/wide view of skeleton structure with pool.jpeg" alt="Metal framework for swimming pool with metal roof structure in place.." class="lightbox-img" loading="lazy">
+    <img src="images/top view of skeleton structure and pool.jpeg" alt="Top view of the metal framework and swimming area." class="lightbox-img" loading="lazy">
+    <img src="images/skeleton structure with pool.jpeg" alt="Full view of metal framework and swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/structure half build.jpeg" alt="Side installation on building for swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/structure over pool.jpeg" alt="Roof and side installation of swimming pool building." class="lightbox-img" loading="lazy">
+    <img src="images/interior metal structure inside.jpeg" alt="Interior metal structure inside the swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (1).jpeg" alt="swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (5).jpeg" alt="Swimming pool floor installed." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (3).jpeg" alt="Back view of swimming pool floor installation." class="lightbox-img" loading="lazy">
+    <img src="images/swimming pool floor.jpeg" alt="Side view of the swimming pools floor installation." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (13).jpeg" alt="Inside Swimming pool area decorating." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (10).jpeg" alt="Partitions and doors being installed in swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (4).jpeg" alt="Painting completed inside the swimming pool build." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (9).jpeg" alt="Doors installed on the partition walls." class="lightbox-img" loading="lazy"
+    <img src="images/Swimming Pool Area (15).jpeg" alt="Floor tiles in wet room for swimming pool in Sellindge." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (12).jpeg" alt="Grey Floor tiles laid in wet room for indoor swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (6).jpeg" alt="Toilet installed and grout applied for toilet area of swimming pool build." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (11).jpeg" alt="Finished toilet area for indoor swimming pool in Sellindge, Kent." class="lightbox-img" loading="lazy">
+    <img src="images/Swimming Pool Area (8).jpeg" alt="Finished toilet area with sink for the swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpatio.jpg" alt="Outside swimming groundworks in preparation for slabs." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpatio2.jpg" alt="Preparation for slabs to be laid around the swimming pool building." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe.jpg" alt="Pipework installation for swimming pool in Sellindge, Kent." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe2.jpg" alt="Trenches dug out for pipework installation for swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe3.jpg" alt="Pipe splits in preparation for installation for swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe4.jpg" alt="Pipework at the side of the swimming pool building." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe5.jpg" alt="Trenches dug out for pipework installation." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe6.jpg" alt="Pipework being installed for the swimming pool build in Sellindge, Kent." class="lightbox-img" loading="lazy">
+    <img src="images/spdigpipe7.jpg" alt="Pipework installation." class="lightbox-img" loading="lazy">
+    <img src="images/spdrain.jpg" alt="Drainage for outside the swimming pool area." class="lightbox-img" loading="lazy">
+    <img src="images/spdrain2.jpg" alt="Drainage groundwork preparation." class="lightbox-img" loading="lazy">
+    <img src="images/spstairs.jpg" alt="Slab steps for swimming pool section." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiobeg.jpg" alt="Slabs being laid outside the front of the swimming pool building." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiosidebeg.jpg" alt="Slabs being laid around the side of the swimming pools building." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiosidebeg3.jpg" alt="Laying slabs around the sides of the swimming pools building." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiopipe.jpg" alt="Cut slab around piping." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiopeg2.jpg" alt="Slabs nearly complete outside the swimming pools building." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiopeg3.jpg" alt="Last section of slabs outside swimming pool build." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiopeg4.jpg" alt="Slabs spaced and ready for next stage." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiosidepeg.jpg" alt="Curved cut slab." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiosidepeg2.jpg" alt="Slabs all spaced around the side of the swimming pool." class="lightbox-img" loading="lazy">
+    <img src="images/sppatiosidepeg3.jpg" alt="Side View of slabs down the side of the swimming pools building." class="lightbox-img" loading="lazy">
+    <img src="images/spfinishedpatiostairs.jpg" alt="Slabs ready for the final stage" class="lightbox-img" loading="lazy">
+
+
     <img src="images/outsideext.jpg" alt="Special Build Image 74" class="lightbox-img" loading="lazy">
     <img src="images/outsideext2.jpg" alt="Special Build Image 75" class="lightbox-img" loading="lazy">
     <img src="images/outsideext3.jpg" alt="Special Build Image 76" class="lightbox-img" loading="lazy">
