added preload for hero banners

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
   
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/Banner%20two.jpg" importance="high" />
+  <link rel="preload" as="image" href="images/roof-hero-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/bathroom-hero-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/kitchen-hero-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/brickwork-hero-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/landscaping-herp-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/blockpaving-hero-image.png" importance="high" />
+  <link rel="preload" as="image" href="images/decorating-hero-banner.png" importance="high" />
+  <link rel="preload" as="image" href="images/extension-hero-banner.png" importance="high" />
 </head>
 
 <body>
@@ -118,8 +126,7 @@
 
     <div class="banner-slider">
       <div class="banner-slide active" style="background-image: url('images/Banner\ two.jpg');"></div>
-       
-       <div class="banner-slide" style="background-image: url('images/roof-hero-banner.png');"></div>
+      <div class="banner-slide" style="background-image: url('images/roof-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/kitchen-hero-banner.png');"></div>
      
       <div class="banner-slide" style="background-image: url('images/bathroom-hero-banner.png');"></div>
