changed hero images

--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
     
 
     <div class="banner-slider">
-      <div class="banner-slide active" style="background-image: url('images/Banner\ two.jpg');"></div>
+      <div class="banner-slide active" style="background-image: url('images/main-banner-hero.png');"></div>
       <div class="banner-slide" style="background-image: url('images/roof-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/kitchen-hero-banner.png');"></div>
-     
       <div class="banner-slide" style="background-image: url('images/bathroom-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/brickwork-hero-banner.png');"></div>
       <div class="banner-slide" style="background-image: url('images/blockpaving-hero-image.png');"></div>
