added preload link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/Banner%20two.jpg" importance="high" />
+  <link rel="preload" as="image" href="images/main-banner-hero.png" importance="high" />
   <link rel="preload" as="image" href="images/roof-hero-banner.png" importance="high" />
   <link rel="preload" as="image" href="images/bathroom-hero-banner.png" importance="high" />
   <link rel="preload" as="image" href="images/kitchen-hero-banner.png" importance="high" />
