capital letter added

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <h2 class="recent-projects-header">Recent Projects</h2>
         
     <div class="infinite-carousel"id="carouselTrack">
-    <h4 class="recent-projects-subheader">Private Swimming Pool installation</h4>
+    <h4 class="recent-projects-subheader">Private Swimming Pool Installation</h4>
     <div class="infinite-track">
     <div class="slide-wrapper"><img src="images/spbeg.jpg" alt="Start of swimming pool dig in Sellindge, Kent." class="lightbox-img" loading="lazy"></div>
     <div class="slide-wrapper"><img src="images/spbeg2.jpg" alt="Preparation dig out for swimming pool area." class="lightbox-img" loading="lazy"></div>
