--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -103,7 +103,7 @@
       <h1 class="visually-hidden">Privacy Policy</h1>
 
       <h2>Who We Are</h2>
-      <p>A.P.T Builders is a construction and building services provider serving clients in Kent, UK. This privacy policy outlines how we collect, use, and protect your information.</p>
+      <p>A.P.T Builders is a construction and building services provider serving clients in Kent. This privacy policy outlines how we collect, use, and protect your information.</p>
 
       <h2>What Data We Collect</h2>
       <p>We may collect the following information via our contact form:</p>
